@@ -11,9 +11,7 @@ import com.github.laxika.magicalvibes.model.StackEntry;
 import com.github.laxika.magicalvibes.model.StackEntryType;
 import com.github.laxika.magicalvibes.model.effect.CardEffect;
 import com.github.laxika.magicalvibes.model.effect.HandChoiceDestination;
-import com.github.laxika.magicalvibes.model.effect.CardEffect;
 import com.github.laxika.magicalvibes.model.effect.OpponentMayPlayCreatureEffect;
-import com.github.laxika.magicalvibes.model.effect.CardEffect;
 import com.github.laxika.magicalvibes.model.effect.PutCardToBattlefieldEffect;
 import com.github.laxika.magicalvibes.model.filter.CardPredicate;
 import com.github.laxika.magicalvibes.model.filter.CardPredicateUtils;
@@ -35,6 +33,7 @@ import java.util.ArrayList;
 import java.util.List;
 import java.util.UUID;
 import java.util.concurrent.ThreadLocalRandom;
+import java.util.function.Predicate;
 
 /**
  * Shared draw/discard/reveal/choice helpers used by every PlayerInteraction effect handler
@@ -86,26 +85,41 @@ public class PlayerInteractionSupport {
     public void applyPutCardToBattlefield(GameData gameData, UUID playerId, PutCardToBattlefieldEffect effect, int xValue,
                                           UUID sourceEquipmentCardId, UUID sourceCardId) {
         applyPutCardToBattlefield(gameData, playerId, effect, xValue, sourceEquipmentCardId, sourceCardId,
-                null, null, null);
+                null, null, null, ignored -> true);
+    }
+
+    public void applyPutCardToBattlefield(GameData gameData, UUID playerId, PutCardToBattlefieldEffect effect, int xValue,
+                                          UUID sourceEquipmentCardId, UUID sourceCardId,
+                                          Predicate<Card> additionalFilter) {
+        applyPutCardToBattlefield(gameData, playerId, effect, xValue, sourceEquipmentCardId, sourceCardId,
+                null, null, null, additionalFilter);
     }
 
     public void applyPutCardToBattlefield(GameData gameData, UUID playerId, PutCardToBattlefieldEffect effect,
                                           int xValue, UUID sourceEquipmentCardId, UUID sourceCardId,
                                           CardEffect thenEffect, CardPredicate thenCondition) {
         applyPutCardToBattlefield(gameData, playerId, effect, xValue, sourceEquipmentCardId, sourceCardId,
-                thenEffect, thenCondition, null);
+                thenEffect, thenCondition, null, ignored -> true);
     }
 
     public void applyPutCardToBattlefield(GameData gameData, UUID playerId, PutCardToBattlefieldEffect effect, int xValue,
                                           UUID sourceEquipmentCardId, UUID sourceCardId, UUID blockingAttackerId) {
         applyPutCardToBattlefield(gameData, playerId, effect, xValue, sourceEquipmentCardId, sourceCardId,
-                null, null, blockingAttackerId);
+                null, null, blockingAttackerId, ignored -> true);
     }
 
     private void applyPutCardToBattlefield(GameData gameData, UUID playerId, PutCardToBattlefieldEffect effect,
                                            int xValue, UUID sourceEquipmentCardId, UUID sourceCardId,
                                            CardEffect thenEffect, CardPredicate thenCondition,
-                                           UUID blockingAttackerId) {
+                                           UUID blockingAttackerId, Predicate<Card> additionalFilter) {
+        applyPutCardToBattlefield(gameData, playerId, effect, xValue, sourceEquipmentCardId, sourceCardId,
+                thenEffect, thenCondition, blockingAttackerId, additionalFilter, null);
+    }
+
+    public void applyPutCardToBattlefield(GameData gameData, UUID playerId, PutCardToBattlefieldEffect effect,
+            int xValue, UUID sourceEquipmentCardId, UUID sourceCardId,
+            CardEffect thenEffect, CardPredicate thenCondition, UUID blockingAttackerId,
+            Predicate<Card> additionalFilter, UUID sourcePermanentId) {
 
         List<Card> hand = gameData.playerHands.get(playerId);
         List<Integer> validIndices = new ArrayList<>();
@@ -114,6 +128,9 @@ public class PlayerInteractionSupport {
                 Card handCard = hand.get(i);
                 if (!predicateEvaluationService.matchesCardPredicate(handCard, effect.predicate(), sourceCardId,
                         gameData, playerId)) {
+                    continue;
+                }
+                if (!additionalFilter.test(handCard)) {
                     continue;
                 }
                 // Mind into Matter: "mana value X or less".
@@ -159,7 +176,8 @@ public class PlayerInteractionSupport {
                 repeats ? effect.label() : null, effect.putAnyNumber(), effect.faceDown(),
                 effect.faceDownPower(), effect.faceDownToughness(), effect.faceDownCardTypes(),
                 returnExiledSourceCardId, effect.returnToHandAtEndStep(), effect.cloaked(),
-                thenEffect, thenCondition, effect.enterTappedAndAttackingIf(), blockingAttackerId);
+                thenEffect, thenCondition, effect.enterTappedAndAttackingIf(), blockingAttackerId,
+                sourcePermanentId, effect.untapSourceIfEnteredCardHasAnySubtype());
 
     }
     public void resolvePlayerMayPlayCreature(GameData gameData, UUID playerId) {
@@ -214,11 +232,7 @@ public class PlayerInteractionSupport {
         playerInputService.beginCardChoice(gameData, playerId, validIndices, prompt);
     }
     public void applyDrawCards(GameData gameData, UUID playerId, int amount) {
-
-        for (int i = 0; i < amount; i++) {
-            drawService.resolveDrawCard(gameData, playerId);
-        }
-
+        drawService.resolveDrawCards(gameData, playerId, amount);
     }
     /**
      * Sindbad: the player draws a card and reveals it; if the revealed card isn't a land card, it is
@@ -227,17 +241,33 @@ public class PlayerInteractionSupport {
      * card (empty library) or was consumed by a draw-replacement interaction.
      */
     public void applyDrawRevealDiscardUnlessLand(GameData gameData, UUID playerId) {
+        Integer beforeDrawCount = gameData.pendingDrawRevealDiscardDrawCounts.remove(playerId);
+        if (beforeDrawCount == null) {
+            beforeDrawCount = gameData.cardsDrawnThisTurnIds.getOrDefault(playerId, List.of()).size();
+            gameData.pendingDrawRevealDiscardDrawCounts.put(playerId, beforeDrawCount);
+            gameData.rerunCurrentEffectAfterInteraction = true;
+            applyDrawCards(gameData, playerId, 1);
+            if (gameData.interaction.isAwaitingInput() || !gameData.pendingMayAbilities.isEmpty()) {
+                return;
+            }
+            gameData.pendingDrawRevealDiscardDrawCounts.remove(playerId);
+        }
+        gameData.rerunCurrentEffectAfterInteraction = false;
 
-        List<Card> hand = gameData.playerHands.get(playerId);
-        int before = hand == null ? 0 : hand.size();
-        applyDrawCards(gameData, playerId, 1);
-
-        hand = gameData.playerHands.get(playerId);
-        if (hand == null || hand.size() <= before) {
+        List<UUID> drawnCardIds = gameData.cardsDrawnThisTurnIds.getOrDefault(playerId, List.of());
+        if (drawnCardIds.size() <= beforeDrawCount) {
             return;
         }
 
-        Card drawn = hand.get(hand.size() - 1);
+        UUID drawnCardId = drawnCardIds.getLast();
+        List<Card> hand = gameData.playerHands.get(playerId);
+        Card drawn = hand == null ? null : hand.stream()
+                .filter(card -> card.getId().equals(drawnCardId))
+                .findFirst()
+                .orElse(null);
+        if (drawn == null) {
+            return;
+        }
         String playerName = gameData.playerIdToName.get(playerId);
         gameLogService.append(gameData, GameLog.textCardText(playerName + " reveals ", drawn, "."));
 
@@ -245,7 +275,7 @@ public class PlayerInteractionSupport {
             return;
         }
 
-        hand.remove(hand.size() - 1);
+        hand.remove(drawn);
         gameData.discardCausedByOpponent = false;
         graveyardService.discardCard(gameData, playerId, drawn);
         gameLogService.append(gameData, GameLog.textCardText(playerName + " discards ", drawn, "."));
@@ -261,11 +291,24 @@ public class PlayerInteractionSupport {
     }
 
     public void resolveDiscardCards(GameData gameData, UUID playerId, int amount, DiscardFollowUp followUp) {
-        resolveDiscardCards(gameData, playerId, amount, followUp, null);
+        resolveDiscardCards(gameData, playerId, amount, followUp, (CardType) null);
     }
 
     public void resolveDiscardCards(GameData gameData, UUID playerId, int amount,
                                     DiscardFollowUp followUp, CardType stopAfterDiscardingType) {
+
+        resolveDiscardCards(gameData, playerId, amount, followUp, stopAfterDiscardingType, null);
+    }
+
+    public void resolveDiscardCards(GameData gameData, UUID playerId, int amount,
+                                    DiscardFollowUp followUp, CardPredicate stopAfterDiscardingPredicate) {
+
+        resolveDiscardCards(gameData, playerId, amount, followUp, null, stopAfterDiscardingPredicate);
+    }
+
+    private void resolveDiscardCards(GameData gameData, UUID playerId, int amount,
+                                     DiscardFollowUp followUp, CardType stopAfterDiscardingType,
+                                     CardPredicate stopAfterDiscardingPredicate) {
 
         if (gameData.discardCausedByOpponent && gameQueryService.isDiscardPrevented(gameData, playerId)) {
             return;
@@ -278,8 +321,11 @@ public class PlayerInteractionSupport {
             return;
         }
 
-        if (stopAfterDiscardingType == null) {
+        if (stopAfterDiscardingType == null && stopAfterDiscardingPredicate == null) {
             playerInputService.beginDiscardChoice(gameData, playerId, amount, followUp);
+        } else if (stopAfterDiscardingPredicate != null) {
+            playerInputService.beginDiscardChoice(gameData, playerId, amount, followUp,
+                    stopAfterDiscardingPredicate);
         } else {
             playerInputService.beginDiscardChoice(gameData, playerId, amount, followUp,
                     stopAfterDiscardingType);
@@ -357,6 +403,10 @@ public class PlayerInteractionSupport {
         gameLogService.append(gameData, revealBuilder.build());
         cardRevealService.revealToAllPlayers(
                 gameData, playerId, GameEventFact.RevealZone.HAND, hand);
+
+        if (gameData.discardCausedByOpponent && gameQueryService.isDiscardPrevented(gameData, playerId)) {
+            return;
+        }
 
         List<Integer> matchingIndices = new ArrayList<>();
         for (int i = 0; i < hand.size(); i++) {
@@ -711,7 +761,7 @@ public class PlayerInteractionSupport {
                     .orElse("card");
             choicePrompt = (choiceOptional ? "You may choose a " : "Choose a ") + typeNames.toLowerCase()
                     + " card to " + actionVerb + ".";
-        } else if (shuffleIntoLibraryMode) {
+        } else if (shuffleIntoLibraryMode || !excludedTypes.contains(CardType.LAND)) {
             choicePrompt = (choiceOptional ? "You may choose a card to " : "Choose a card to ")
                     + actionVerb + ".";
         } else {
@@ -724,7 +774,7 @@ public class PlayerInteractionSupport {
                 List.of(), sourcePermanentId, choicePrompt, false, effectiveOptional, false,
                 null, null, declineFallbackDiscardCount, filter, exileAllCopiesOfChosenNames,
                 imprintOnSource, shuffleIntoLibraryMode, false, grantPlayPermission, returnAtNextEndStep,
-                exilePlayOpponentTax, false, declineEffect, chosenCardCondition, chosenCardThenEffect);
+                exilePlayOpponentTax, false, declineEffect, chosenCardCondition, chosenCardThenEffect, 0);
         interactionHandlerRegistry.begin(gameData, interaction);
 
         log.info("Game {} - {} choosing {} card(s) from {}'s hand to {}",
@@ -900,6 +950,49 @@ public class PlayerInteractionSupport {
                 false, true, false, null, null, 0, null, false, false, false, true));
 
         log.info("Game {} - {} may choose a card from {}'s hand to discard and draw",
+                gameData.id, casterName, targetName);
+    }
+
+    /**
+     * Revealing Eye: the caster reveals the target opponent's hand and may choose a matching card
+     * for that player to discard and draw.
+     */
+    public void resolveRevealHandChooseCardToDiscardAndDraw(GameData gameData, StackEntry entry,
+                                                             CardPredicate filter) {
+        UUID targetPlayerId = entry.getTargetId();
+        UUID casterId = entry.getControllerId();
+        List<Card> hand = gameData.playerHands.get(targetPlayerId);
+        String targetName = gameData.playerIdToName.get(targetPlayerId);
+        String casterName = gameData.playerIdToName.get(casterId);
+
+        cardRevealService.revealHandToAllPlayers(gameData, targetPlayerId);
+        if (hand == null || hand.isEmpty()) {
+            log.info("Game {} - {} reveals {}'s empty hand", gameData.id, casterName, targetName);
+            return;
+        }
+
+        gameData.discardCausedByOpponent = !casterId.equals(targetPlayerId);
+
+        List<Integer> validIndices = new ArrayList<>();
+        for (int i = 0; i < hand.size(); i++) {
+            if (filter == null || predicateEvaluationService.matchesCardPredicate(hand.get(i), filter, null)) {
+                validIndices.add(i);
+            }
+        }
+
+        if (validIndices.isEmpty()) {
+            gameLogService.append(gameData, GameLog.text(
+                    casterName + " cannot choose a card (" + targetName + "'s hand has no matching cards)."));
+            log.info("Game {} - {}'s hand has no matching cards for {}", gameData.id, targetName, casterName);
+            return;
+        }
+
+        interactionHandlerRegistry.begin(gameData, new PendingInteraction.RevealedHandChoice(
+                casterId, targetPlayerId, validIndices, 1, true, false, List.of(), null,
+                "You may choose a card to discard. If you do, that player draws a card.",
+                false, true, false, null, null, 0, null, false, false, false, true));
+
+        log.info("Game {} - {} may choose a matching card from {}'s revealed hand to discard and draw",
                 gameData.id, casterName, targetName);
     }
 
